# ClaudeCodeX

./: .gitignore  Cargo.toml  README.md
docs/: ARCHITECTURE.md  LOCAL_MODELS.md  ROADMAP.md
src/: agent.rs  bench.rs  cli.rs  config.rs  context.rs  fullscreen.rs  hooks.rs  main.rs  mcp.rs  parser.rs  patch.rs  permissions.rs  preview.rs  release.rs  review.rs  safety.rs  session.rs  skills.rs  subagents.rs  tasks.rs  ui.rs
src/providers/: mod.rs
src/tools/: mod.rs
tests/: protocol.rs
